@@ -1,4 +1,8 @@
 ﻿
+2007-04-29  Roland Clobus <rclobus@bigfoot.com>
+	* client/gtk/gui.c: Upgraded the code to 2.6, and allow for
+	toolbuttons without shortcut keys.
+
 2007-04-28  Roland Clobus <rclobus@bigfoot.com>
 	* common/gtk/guimap.c, common/gtk/guimap.h, client/gtk/interface.c,
 	client/gtk/frontend.c: Single click actions are set enabled with the
